# rtype

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt  doc  orga
client/: CMakeLists.txt  main.cpp
client/include/: Client.hpp  Protocol.hpp  client.hpp  protocol.hpp
client/src/: Client.cpp  Protocol.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/: Component.hpp  Entity.hpp  World.hpp
engine/include/Components/: Bullet.hpp  Color.hpp  Enemy.hpp  Position.hpp  Velocity.hpp
engine/include/Systems/: CollisionSystem.hpp  EnemySpawner.hpp  PhysicsSystem.hpp  RenderSystem.hpp
engine/src/: CMakeLists.txt  Entity.cpp
server/: CMakeLists.txt
server/include/: ClientRegistry.hpp  Network.hpp  Protocol.hpp
server/src/: ClientRegistry.cpp  Network.cpp  Protocol.cpp  main.cpp
tests/server/: main.cpp
